--- a/src/style.scss
+++ b/src/style.scss
@@ -54,6 +54,19 @@ body {
         border-radius: 10px;
         cursor: pointer;
       }
+
+      label {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        color: #8da4f1;
+        font-size: 12px;
+        cursor: pointer;
+
+        img {
+          width: 32px;
+        }
+      }
     }
     
     //out side of form
