--- a/src/style.scss
+++ b/src/style.scss
@@ -97,6 +97,46 @@ body {
       border-right: 1px solid white;
       background-color: #3e3c61;
       overflow: hidden;
+    
+    .search {
+      border-bottom: 1px solid gray;
+
+
+      .searchForm {
+        padding: 10px;
+
+       input {
+         background-color: transparent;
+         color: white;
+         border: none;
+         outline: none;
+
+         &::placeholder {
+           color: lightgrey;
+         }
+       }
+      }
+    }
+
+    .userChat {
+      padding: 10px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      color: white;
+      cursor: pointer;
+      
+      &:hover {
+        background-color: #2f2d52;
+      }
+
+      img {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        object-fit: cover;
+      }
+    }
 
       .navbar {
         display: flex;
@@ -115,14 +155,23 @@ body {
           display: flex;
           gap: 10px;
 
-          img{
+          img {
             background-color: #ddddf7;
             height: 24px;
             width: 24px;
             border-radius: 50%;
           }
+
+          button {
+             background-color: #5d5b8d;
+             color: white;
+             border: none;
+             font-size: 10px;
+             cursor: pointer;
+          }
         }
 
+        
 
       }
     }
