--- a/src/style.scss
+++ b/src/style.scss
@@ -136,6 +136,17 @@ body {
         border-radius: 50%;
         object-fit: cover;
       }
+
+      .userChatinfo {
+        span {
+          font-size: 16px;
+          font-weight: 500;
+        }
+        P {
+          font-size: 14px;
+          color: lightgrey;
+        }
+      }
     }
 
       .navbar {
@@ -175,6 +186,28 @@ body {
 
       }
     }
-    .chat{flex: 2;}
+    .chat {
+      flex: 2;
+
+      .chatInfo {
+        height: 50px;
+        background-color: #5d5b8d;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 10px;
+        color: lightgrey;
+      }
+      .chatIcons {
+        display: flex;
+        gap: 10px;
+
+        img {
+          height: 24px;
+          cursor: pointer;
+        }
+      }
+    }
+
   }
 }
