--- a/src/style.scss
+++ b/src/style.scss
@@ -86,7 +86,6 @@ body {
   justify-content: center;
 
   .container {
-    border: 1px solid white;
     border-radius: 10px;
     width: 65%;
     height: 80%;
@@ -94,7 +93,6 @@ body {
 
     .sidebar {
       flex: 1; 
-      border-right: 1px solid white;
       background-color: #3e3c61;
       overflow: hidden;
     
@@ -205,6 +203,110 @@ body {
         img {
           height: 24px;
           cursor: pointer;
+        }
+      }
+
+      .messages {
+        background-color: #ddddf7;
+        padding: 10px;
+        height: calc(100% - 160px);
+        overflow: scroll;
+
+        .message{
+          display: flex;
+          gap: 20px;
+          margin-bottom: 20px;
+          
+
+          .messageInfo {
+            display: flex;
+            flex-direction: column;
+            color: grey;
+            font-weight: 300;
+
+            img{ 
+              width: 40px;
+              height: 40px;
+              border-radius: 50%;
+              object-fit: cover;
+            }
+          }
+          .messageContent {
+            //note for long messages
+            max-width: 80%;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+            p {
+              background-color: white;
+              padding: 10px 20px;
+              border-radius: 0px 10px 10px 10px;
+              max-width: max-content;
+            }
+
+
+            img {
+              width: 50%;
+            }
+          }
+
+          &.owner {
+            flex-direction: row-reverse;
+
+            .messageContent {
+
+
+              align-items: flex-end;
+            }
+
+            p {
+              background-color: #8da4f1;
+              color: white;
+              border-radius: 10px 0px 10px 10px;
+            }
+          }
+        }
+      }
+
+      .input {
+        background-color: white;
+        height: 50px;
+        padding: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        
+        input {
+          width: 100%;
+          border: none;
+          outline: none;
+          color: #2f2d52;
+          font-weight: 18px;
+
+          &::placeholder {
+            color: lightgrey;
+          }
+        }
+
+        .send {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+
+          img {
+            height: 24px;
+            cursor: pointer;
+          }
+
+          button {
+            border: none;
+            background-color:#8da4f1;
+            color: white;
+            padding: 10px 15px;
+            border-radius: 20px;
+
+          }
         }
       }
     }
