--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,23 @@
+@mixin mobile {
+  @media screen and (max-width: 400px) {
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media screen and (max-width: 760px) {
+    @content;
+  }
+}
+
+@mixin laptop {
+  @media screen and (max-width: 1200px) {
+    @content;
+  }
+}
+
+
+
 body {
   margin:0;
   padding: 0;
